- style/fix: added font responsiveness for tablets - Font was too small on an ipad pro - style: changed font

--- a/public/app.global.css
+++ b/public/app.global.css
@@ -1,5 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Damion&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap');
+/* @import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap'); */
 @import url('https://fonts.googleapis.com/css2?family=Alegreya:ital,wght@0,400;0,500;0,700;0,800;0,900;1,400;1,500;1,700;1,800;1,900&display=optional');
 @import url('https://fonts.googleapis.com/css2?family=Titillium+Web:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&display=swap');
 
@@ -11,10 +11,16 @@ body{
     height: 100%;
 }
 
-/* h5.MuiTypography-h5{
+h5.MuiTypography-h5{
     font-weight: 300;
-} */
+}
 
+@media (min-width: 799px) and (min-height: 1000px){
+    h5.MuiTypography-h5{
+        font-size: 2.5rem
+
+    }
+}
 #__next{
     height: 100%
 }
